--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "jsonwebtoken": "^8.5.1",
     "minimist": "^1.2.5",
     "mongoose": "^5.9.1",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "cross-env": "^7.0.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
-    "cross-env": "^7.0.0",
     "nodemon": "^2.0.2"
   }
 }
